# OrbitCast

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.superpowers/brainstorm/: .last-token
.superpowers/brainstorm/36490-1783806752/state/: server-info  server-instance-id
.superpowers/brainstorm/9421-1783822601/state/: server-instance-id
.superpowers/brainstorm/9596-1783822637/state/: server-instance-id
.superpowers/brainstorm/9801-1783822749/content/: c-refined.html  forecast-style.html  waiting.html
.superpowers/brainstorm/9801-1783822749/state/: server-instance-id  server-stopped
api/: Dockerfile  pyproject.toml
api/orbitcast_api/: __init__.py  auth.py  config.py  db.py  deps.py  dish_doctor.py  forecast.py  forecast_cache.py  main.py  map.py  ratelimit.py  satellites.py  schema.sql  schemas.py  security.py  weather.py
api/orbitcast_api/routes/: dish_doctor.py  forecast.py  map.py  measurements.py  probe.py  skyview.py  users.py
api/tests/: conftest.py  test_db.py  test_dish_doctor_route.py  test_forecast_cache.py  test_forecast_route.py  test_forecast_service.py  test_healthz.py  test_map_route.py  test_map_service.py  test_marts.py  test_measurements_route.py  test_probe_route.py  test_ratelimit.py  test_security.py  test_skyview.py  test_users_route.py  test_weather.py
core/: pyproject.toml
core/orbitcast_core/: __init__.py  celestrak.py  orbital.py  schedule.py  spatial.py
core/tests/: test_celestrak.py  test_orbital.py  test_schedule.py  test_spatial.py
docs/: mlab-setup.md
docs/evals/: v20260708T010837Z.json
docs/superpowers/specs/: 2026-07-12-verdict-first-takeaways-design.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  DishDoctor.tsx  ForecastChart.tsx  Methodology.tsx  Privacy.tsx  RegionMap.tsx  api.ts  countdown.ts  main.tsx  probe.ts  styles.css
ml/: pyproject.toml
ml/orbitcast_ml/: __init__.py  anomaly.py  fallback.py  features.py  forecast.py  metrics.py  models.py  registry.py  takeaways.py  train.py  training_matrix.py
ml/tests/: test_anomaly.py  test_fallback.py  test_features.py  test_forecast.py  test_metrics.py  test_model_registry.py  test_models.py  test_takeaways.py  test_train.py  test_training_matrix.py
pipelines/: Dockerfile  pyproject.toml
pipelines/orbitcast_pipelines/: __init__.py  atlas.py  defs.py  fallback_marts.py  mlab.py  ookla.py  orbital_mart.py  registry.py  training.py  user_measurements.py  validate.py  warehouse.py  weather_mart.py  wetlinks.py
pipelines/tests/: test_atlas.py  test_fallback_marts.py  test_mlab.py  test_ookla.py  test_orbital_mart.py  test_registry.py  test_training.py  test_user_measurements.py  test_validate.py  test_weather_mart.py
reporter/: Dockerfile  README.md  orbitcast_reporter.py  pyproject.toml
reporter/tests/: test_reporter.py
scripts/: backfill.py  ingest_mlab.py  refresh_gp.py  run_training_pipeline.py
