# Root of the OrbitCast uv workspace.
# Members share one lockfile and one virtualenv; `orbitcast-core` is the shared
# base package imported by both `api` and (later) `pipelines` — see CLAUDE.md §7.1.
[project]
name = "orbitcast"
version = "0.1.0"
description = "OrbitCast — Starlink sky view, latency/throughput forecast, and Dish Doctor"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["core", "api", "pipelines", "ml"]

[tool.uv.sources]
orbitcast-core = { workspace = true }
orbitcast-ml = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["core", "api", "pipelines", "ml"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["core/tests", "api/tests", "pipelines/tests", "ml/tests"]
