[project]
name = "orbitcast-api"
version = "0.1.0"
description = "OrbitCast FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "orbitcast-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orbitcast_api"]
