[project]
name = "orbitcast-core"
version = "0.1.0"
description = "Shared OrbitCast core: orbital math, H3 fusion, schedule arithmetic"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orbitcast_core"]
