[project]
name = "orbitcast-core"
version = "0.1.0"
description = "Shared OrbitCast core: orbital math, H3 fusion, schedule arithmetic"
requires-python = ">=3.12"
dependencies = [
    "skyfield>=1.49",
    "numpy>=1.26",
    "sgp4>=2.23",
    "h3>=4.1",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orbitcast_core"]
