[project]
name = "orbitcast-ml"
version = "0.1.0"
description = "OrbitCast forecast models (LightGBM quantile regression) + eval harness"
requires-python = ">=3.12"
dependencies = [
    "orbitcast-core",
    "lightgbm>=4.5",
    "numpy>=2.0",
    "duckdb>=1.1",
    "pyarrow>=17",
    "h3>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orbitcast_ml"]
