[project]
name = "orbitcast-pipelines"
version = "0.1.0"
description = "OrbitCast ingestion + fusion pipelines (Dagster + DuckDB)"
requires-python = ">=3.12"
dependencies = [
    "orbitcast-core",
    "orbitcast-ml",
    "duckdb>=1.1",
    "pyarrow>=17",
    "httpx>=0.27",
    "h3>=4.1",
    "dagster>=1.8",
    "dagster-webserver>=1.8",
    "google-cloud-bigquery>=3.42.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orbitcast_pipelines"]
