[project]
name = "orbitcast-reporter"
version = "0.1.0"
description = "OrbitCast dish reporter — polls the Starlink dish gRPC status endpoint and submits measurements"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.60",
    "yagrc>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["orbitcast_reporter.py"]
